--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -53,10 +53,7 @@
     float: left;
 
     &::before {
-      content: url(icon-constants.get-icon(
-        "standard--arrow-left-1",
-        core.$uq-neutral
-      ));
+      content: url('icon-constants.get-icon("standard--arrow-left-1", core.$uq-neutral)');
       width: 3rem;
       display: inline-block;
       position: absolute;
@@ -74,10 +71,7 @@
     float: right;
 
     &::after {
-      content: url(icon-constants.get-icon(
-        "standard--arrow-right-1",
-        core.$uq-neutral
-      ));
+      content: url('icon-constants.get-icon("standard--arrow-right-1", core.$uq-neutral)');
       width: 3rem;
       display: inline-block;
       position: absolute;
