--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -100,15 +100,12 @@
         position: absolute;
         top: 0;
         right: 0;
-        display: none; //block
+        display: none; // block
         width: 3rem;
         height: 3.5rem;
         padding: core.$space core.$space;
         text-indent: -100vw;
-        background-image: url(icon-constants.get-icon(
-          "standard--arrow-down-1",
-          core.$uq-purple
-        ));
+        background-image: url('icon-constants.get-icon("standard--arrow-down-1", core.$uq-purple)');
         background-size: 1.2rem;
         background-position: center center;
         background-repeat: no-repeat;
@@ -118,10 +115,7 @@
       &--open,
       &--has-subnav:focus {
         .uq-side-nav__list-item__sub-toggle {
-          background-image: url(icon-constants.get-icon(
-            "standard--arrow-up-1",
-            core.$uq-purple
-          ));
+          background-image: url('icon-constants.get-icon("standard--arrow-up-1", core.$uq-purple)');
         }
 
         .uq-side-nav__list--level-2 {
