--- a/packages/storybook-html/src/components/icon/icon.scss
+++ b/packages/storybook-html/src/components/icon/icon.scss
@@ -49,10 +49,7 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: 100%;
-      background-image: url(icon-constants.get-icon(
-        "agriculture-and-environment--agriculture-machine-tractor",
-        core.$uq-green
-      ));
+      background-image: url('icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor", core.$uq-green)');
     }
   }
 }
