--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -93,7 +93,7 @@
     </nav>
 
     <!-- Mobile Footer Navigation-->
-    <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
+    <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation" aria-label="footer navigation mobile">
       <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
         <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
           <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
@@ -181,7 +181,7 @@
     </nav>
     <!-- Footer contact details -->
     <div class="uq-footer__contact">   
-      <nav class="uq-footer__contact-item">
+      <nav class="uq-footer__contact-item" aria-label="Social Media">
         <ul class="uq-footer__footer-list uq-footer__contact-social"> 
           <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
           <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
@@ -193,14 +193,14 @@
       <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
    
     </div>
-    <nav class="uq-footer__meta">
+    <nav class="uq-footer__meta" aria-label="Business meta">
       <ul  class="uq-footer__footer-list">
         <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
         <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a></li>
       </ul>
     </nav>
-    <nav class="uq-footer__footer">
+    <nav class="uq-footer__footer" aria-label="Term and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
               <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
