--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -1,14 +1,14 @@
 <header class="uq-header" data-gtm-category="Header">
   <div class="uq-header__container">
-    <div class="uq-header__menu-toggle">
+    <div class="uq-header__menu-toggle" data-gtm-category="Primary header">
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
     </div>
-    <div class="uq-header__logo">
-      <a class="logo--large" href="https://www.uq.edu.au/">
+    <div class="uq-header__logo" data-gtm-category="Primary header">
+      <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
         <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
       </a>
     </div>
-    <div class="uq-header__nav-primary" data-gtm-category="Header navigation">
+    <div class="uq-header__nav-primary" data-gtm-category="Primary header">
       <nav class="uq-header__nav-primary-container">
         <ul class="uq-header__nav-primary-list">
           <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
@@ -197,15 +197,15 @@
         </ul>
       </nav>
     </div>
-    <div class="uq-header__search-toggle">
-      <button class="nav-primary__toggle nav-primary__search-toggle">
+    <div class="uq-header__search-toggle"  data-gtm-category="Search">
+      <button class="nav-primary__toggle nav-primary__search-toggle" data-gtm-action="Toggle">
          <div class="search-toggle__label">Search</div>
       </button>
     </div>
   </div>
-  <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile">
+  <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
     <ul>
-      <li class="uq-header__newglobal-nav-item">
+      <li class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
         <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
         <ul>
           <li>
@@ -254,7 +254,7 @@
           </li>
         </ul>
       </li>
-      <li  class="uq-header__newglobal-nav-item">
+      <li  class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
         <a  class="uq-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
         <ul>
           <li>
@@ -289,7 +289,7 @@
           </li>
         </ul>
       </li>
-      <li  class="uq-header__newglobal-nav-item">
+      <li  class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
         <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
         <ul>
           <li>
@@ -327,7 +327,7 @@
           </li>
         </ul>
       </li>
-      <li class="uq-header__newglobal-nav-item">
+      <li class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
         <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">About</a>
         <ul>
           <li>
@@ -361,23 +361,23 @@
           </li>
         </ul>
       </li>
-      <li  class="uq-header__nav-secondary-item">
+      <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="#">UQ home</a>
       </li>
-      <li  class="uq-header__nav-secondary-item">
+      <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="#">News</a>
       </li>
-      <li  class="uq-header__nav-secondary-item">
+      <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="#">Events</a>
       </li>
-      <li  class="uq-header__nav-secondary-item">
+      <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="#">Give</a>
       </li>
-      <li  class="uq-header__nav-secondary-item">
+      <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="#">Contact</a>
       </li>  
   </nav>
-  <div class="uq-header__search" data-gtm-category="Header search">
+  <div class="uq-header__search" data-gtm-category="Search">
     <div class="uq-header__search-container">
       <form>
         <fieldset>
@@ -392,7 +392,7 @@
       </form>
     </div>
   </div>
-  <div class="uq-header__nav-secondary">
+  <div class="uq-header__nav-secondary" data-gtm-category="Secondary header">
     <nav class="uq-header__nav-secondary-container">
       <ul class="uq-header__nav-secondary-list">
           <li class="uq-header__nav-secondary-item">
