--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -19,5 +19,5 @@ $alert-font-size-l: core.$font-size-l !default;
 $alert-font-weight-thin: core.$font-weight-thin !default;
 $alert-font-weight-medium: core.$font-weight-medium !default;
 
-$alert-text-color: core.$uq-neutral-dark80 !default; //#222 !default;
+$alert-text-color: #181818 !default; //#222 !default;
 $alert-close-color: core.$uq-neutral-dark40 !default; //#747474 !default;
