--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -79,7 +79,7 @@ $link-hover: #005ea5;
 $link-active: $link-hover;
 
 // Alerts and Status - Dark
-$info: $link;
+$info: #0D6DCD;
 $success: $uq-green-dark10;
 $warning: $uq-yellow;
 $alert: $uq-red-dark20;
