--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -96,7 +96,7 @@
     <nav class="uq-footer__navigation uq-footer--mobile">
       <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
         <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Media</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
@@ -110,7 +110,7 @@
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Staff</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Staff</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
@@ -130,7 +130,7 @@
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Current students</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Current students</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
@@ -150,7 +150,7 @@
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Library</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
@@ -158,7 +158,7 @@
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Contact</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
