--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -94,7 +94,7 @@
 
     .uq-alert__message {
       &::before {
-        background-image: url(icon.get-icon('standard--success-circle', core.$uq-neutral-dark80));
+        background-image: url(icon.get-icon('standard--check-circle', core.$uq-neutral-dark80));
       }
     }
   }
@@ -112,7 +112,7 @@
 
     .uq-alert__message {
       &::before {
-        background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-neutral-dark80));
+        background-image: url(icon.get-icon('standard--exclamation-triangle', core.$uq-neutral-dark80));
       }
     }
   }
@@ -196,7 +196,7 @@
 
       .uq-alert__message {
         &::before {
-          background-image: url(icon.get-icon('standard--success-circle', core.$uq-white));
+          background-image: url(icon.get-icon('standard--check-circle', core.$uq-white));
         }
       }
     }
@@ -219,7 +219,7 @@
 
       .uq-alert__message {
         &::before {
-          background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-white));
+          background-image: url(icon.get-icon('standard--exclamation-triangle', core.$uq-white));
         }
       }
     }
