--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -485,7 +485,7 @@ $use-encapsulation: false !default;
     background-color: $form-color-success;
 
     &::before {
-      background-image: url(icon.get-icon('standard--success-circle', core.$uq-white));
+      background-image: url(icon.get-icon('standard--check-circle', core.$uq-white));
     }
   }
 
